# Mini-private-keys

Mini private keys/: README.md  assignment4.cabal  report.html  stack.yaml
Mini private keys/benchmark/: PerfectBench.hs
Mini private keys/privatetoWIF/: Main.hs
Mini private keys/src/: Miniprivate.hs  PerfectTree.hs
Mini private keys/valid/: Main.hs
Mini private keys/wiftoPrivate/: Main.hs
